; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_ipmmu-vmsa.c___ipmmu_domain_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_ipmmu-vmsa.c___ipmmu_domain_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu_domain = type { i32 }
%struct.ipmmu_vmsa_domain = type { %struct.iommu_domain, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.iommu_domain* (i32)* @__ipmmu_domain_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.iommu_domain* @__ipmmu_domain_alloc(i32 %0) #0 {
  %2 = alloca %struct.iommu_domain*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ipmmu_vmsa_domain*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @GFP_KERNEL, align 4
  %6 = call %struct.ipmmu_vmsa_domain* @kzalloc(i32 8, i32 %5)
  store %struct.ipmmu_vmsa_domain* %6, %struct.ipmmu_vmsa_domain** %4, align 8
  %7 = load %struct.ipmmu_vmsa_domain*, %struct.ipmmu_vmsa_domain** %4, align 8
  %8 = icmp ne %struct.ipmmu_vmsa_domain* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store %struct.iommu_domain* null, %struct.iommu_domain** %2, align 8
  br label %16

10:                                               ; preds = %1
  %11 = load %struct.ipmmu_vmsa_domain*, %struct.ipmmu_vmsa_domain** %4, align 8
  %12 = getelementptr inbounds %struct.ipmmu_vmsa_domain, %struct.ipmmu_vmsa_domain* %11, i32 0, i32 1
  %13 = call i32 @mutex_init(i32* %12)
  %14 = load %struct.ipmmu_vmsa_domain*, %struct.ipmmu_vmsa_domain** %4, align 8
  %15 = getelementptr inbounds %struct.ipmmu_vmsa_domain, %struct.ipmmu_vmsa_domain* %14, i32 0, i32 0
  store %struct.iommu_domain* %15, %struct.iommu_domain** %2, align 8
  br label %16

16:                                               ; preds = %10, %9
  %17 = load %struct.iommu_domain*, %struct.iommu_domain** %2, align 8
  ret %struct.iommu_domain* %17
}

declare dso_local %struct.ipmmu_vmsa_domain* @kzalloc(i32, i32) #1

declare dso_local i32 @mutex_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
